# library_email-service-provider-core_python

./: CHANGELOG.md  README.md  pyproject.toml
src/thelittlehackers/email/provider/: email_provider.py
