[tool.poetry]
authors = ["Daniel CAUNE <daniel.caune@thelittlehackers.com>"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: Other/Proprietary License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Topic :: Software Development :: Libraries",
]
description = "Foundational base class and core functionality for connecting to various email service providers"
include = [
    "CHANGELOG.md"
]
keywords = ["email", "library", "provider", "service", "thelittlehackers"]
license = "SEE LICENSE IN <LICENSE.md>"
name = "thelittlehackers-email-service-provider-core"
packages = [{ include = "thelittlehackers", from = "src" }]
readme = "README.md"
repository = "https://github.com/the-little-hackers/library_email-service-provider-core_python"
version = "1.0.0"

[tool.poetry.dependencies]
python = "^3.10"
thelittlehackers-core = {git = "git@github.com:the-little-hackers/library_thelittlehackers-core_python.git"}
thelittlehackers-email-templating = {git = "git@github.com:the-little-hackers/library_email-templating_python.git"}

[tool.poetry.group.dev.dependencies]
black = "^24.8.0"
flake8 = "^7.1.1"
setuptools = "^74.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
